tests/parse/fail/illegal-71.dcf
void foo ( ) {
  int a;
  a = 0;
}
void main ( ) {
  a = 5;

  // Test that const declarations after statements are not allowed
  const int a;
}
